--- a/app/src/main/res/layout/car_item.xml
+++ b/app/src/main/res/layout/car_item.xml
@@ -3,7 +3,7 @@
               xmlns:app="http://schemas.android.com/apk/res-auto"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
-              android:background="#f1f1f1"
+              android:background="#eeeeee"
               android:onClick="onViewClickedEvent"
               android:orientation="horizontal">
 
@@ -45,7 +45,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="0dp"
             android:orientation="vertical">
 
             <TextView
@@ -75,6 +75,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="130dp"
                 android:layout_gravity="center"
+                android:layout_marginTop="10dp"
+                android:background="#999999"
                 android:scaleType="fitCenter"
                 app:srcCompat="@drawable/car_icon_dark"/>
 
