--- a/app/src/main/res/layout/car_item.xml
+++ b/app/src/main/res/layout/car_item.xml
@@ -23,7 +23,7 @@
             android:layout_height="25dp"
             android:layout_gravity="center"
             android:scaleType="fitXY"
-            app:srcCompat="@drawable/car_icon_dark"/>
+            app:srcCompat="@mipmap/service_arrow_dark"/>
 
     </FrameLayout>
 
@@ -56,6 +56,18 @@
                 android:layout_toLeftOf="@+id/txtCarNumber"
                 android:layout_toStartOf="@+id/txtCarNumber"/>
 
+            <ImageView
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_marginBottom="0dp"
+                android:layout_marginLeft="0dp"
+                android:layout_marginRight="1dp"
+                android:layout_marginTop="-0dp"
+                android:src="@drawable/dot_icon"
+                />
+
             <TextView  style="@style/largeLabel"
                 android:id="@+id/txtCarNumber"
                 android:layout_width="wrap_content"
@@ -67,7 +79,7 @@
                 android:layout_marginTop="0dp"
                 android:layout_weight="1"
                 android:text="0"
-                android:textColor="#444444"/>
+                android:textColor="#eeeeee"/>
 
         </RelativeLayout>
 
@@ -114,6 +126,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="130dp"
                 android:layout_gravity="center"
+                android:layout_marginBottom="20dp"
                 android:layout_marginTop="10dp"
                 android:background="#999999"
                 android:scaleType="fitCenter"
