Added transparent tile

--- a/app/src/main/res/layout/content_home.xml
+++ b/app/src/main/res/layout/content_home.xml
@@ -4,9 +4,10 @@
                 android:id="@+id/menuContentHomeID"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@color/transBlack"
+                android:background="@drawable/bg_portrait"
                 android:paddingTop="50dp"
                 app:layout_behavior="@string/appbar_scrolling_view_behavior">
+    <!-- android:background="@color/colorgreyBg2"  -->
 
     <FrameLayout
         android:layout_width="match_parent"
