--- a/app/src/main/res/drawable/bubble_out.xml
+++ b/app/src/main/res/drawable/bubble_out.xml
@@ -7,13 +7,13 @@
             android:pivotY="0%"
             android:toDegrees="0" >
             <shape android:shape="rectangle" >
-                <solid android:color="#bbbbbb" />
+                <solid android:color="#0088cc" />
             </shape>
         </rotate>
     </item>
     <item android:right="16dp">
         <shape android:shape="rectangle" >
-            <solid android:color="#bbbbbb" />
+            <solid android:color="#0088cc" />
             <corners android:radius="4dp" />
         </shape>
     </item>
