--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -24,7 +24,10 @@
                 android:layout_height="match_parent"
                 android:focusableInTouchMode="true"
                 android:orientation="vertical"
-                android:padding="20dp"
+                android:paddingBottom="20dp"
+                android:paddingLeft="20dp"
+                android:paddingRight="20dp"
+                android:paddingTop="40dp"
                 tools:context="co.za.geartronix.activities.LoginActivity">
 
                 <ImageView
@@ -32,27 +35,38 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="20dp"
-                    android:layout_marginTop="80dp"
+                    android:layout_marginTop="0dp"
                     app:srcCompat="@drawable/logo"/>
 
                 <TextView
                     style="@style/mediumLabel"
-                    android:text="@string/username"/>
+                    android:id="@+id/txtWelcomeMessage"
+                    android:textStyle="bold"
+                    android:text="@string/sign_in_welcome_message"/>
+
+                <TextView
+                    android:id="@+id/lblUsername"
+                    style="@style/mediumLabel"
+                    android:textColor="#cccccc"
+                    android:text="@string/enter_email_or_cell"
+                    android:visibility="gone"/>
 
                 <EditText
                     android:id="@+id/txtUsername"
+                    style="@style/mediumTextBox"
                     android:hint="@string/enter_email_or_cell"
-                    style="@style/mediumTextBox"/>
+                    android:visibility="gone"/>
 
                 <TextView
                     style="@style/mediumLabel"
+                    android:textColor="#cccccc"
                     android:text="@string/password"/>
 
                 <EditText
                     android:id="@+id/txtPassword"
-                    android:inputType="textWebPassword"
+                    style="@style/mediumTextBox"
                     android:hint="@string/password"
-                    style="@style/mediumTextBox"/>
+                    android:inputType="textWebPassword"/>
 
                 <Button
                     android:id="@+id/btnLogin"
@@ -62,38 +76,48 @@
                     android:onClick="onViewClickedEvent"
                     android:text="@string/sign_in"/>
 
-                <TextView
-                    android:id="@+id/txtForgotPassword"
-                    style="@style/forgotPasswordLabel"
-                    android:onClick="onViewClickedEvent"
-                    android:text="@string/forgot_password"
-                    android:textAlignment="center"/>
-
             </LinearLayout>
 
         </ScrollView>
 
     </FrameLayout>
 
-    <FrameLayout
+    <RelativeLayout
         android:id="@+id/frmLoginBottom"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
+        android:paddingTop="12dp"
+        android:paddingBottom="12dp"
+        android:paddingLeft="0dp"
+        android:paddingRight="0dp"
         android:background="@color/login_bottom_background">
 
-        <TextView   style="@style/mediumLabel"
-                    android:id="@+id/btnRegister"
-                    android:text="@string/create_a_new_account"
-                    android:layout_width="match_parent"
-                    android:layout_marginTop="0dp"
-                    android:layout_marginBottom="0dp"
-                    android:paddingTop="10dp"
-                    android:paddingBottom="10dp"
-                    android:paddingLeft="20dp"
-                    android:textAlignment="center"
-                    android:onClick="onViewClickedEvent"/>
-    </FrameLayout>
+        <TextView  style="@style/forgotPasswordLabel"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_toLeftOf="@+id/btnRegister"
+            android:layout_margin="0dp"
+            android:padding="0dp"
+            android:id="@+id/txtForgotPassword"
+            android:onClick="onViewClickedEvent"
+            android:text="@string/forgot_password"
+            android:textAlignment="center"/>
+
+        <TextView style="@style/mediumLabel"
+                  android:layout_alignParentRight="true"
+                  android:layout_alignParentEnd="true"
+                  android:id="@+id/btnRegister"
+                  android:text="Switch user"
+                  android:layout_width="wrap_content"
+                  android:layout_margin="0dp"
+                  android:paddingTop="0dp"
+                  android:paddingBottom="0dp"
+                  android:paddingLeft="40dp"
+                  android:paddingRight="30dp"
+                  android:textAlignment="center"
+                  android:onClick="onViewClickedEvent"/>
+    </RelativeLayout>
 
     <include
         android:id="@+id/frmLoadingScreen"
