--- a/app/src/main/res/layout/content_home.xml
+++ b/app/src/main/res/layout/content_home.xml
@@ -42,11 +42,15 @@
                 android:layout_gravity="center">
 
                 <ImageView
-                    android:id="@+id/imgSelectedActivity"
-                    android:layout_width="match_parent"
-                    android:layout_height="300dp"
+                    android:id="@+id/imgWelcome"
+                    android:layout_width="200dp"
+                    android:layout_height="60dp"
+                    android:scaleType="fitXY"
                     android:visibility="invisible"
-                    app:srcCompat="@drawable/close_icon"/>
+                    android:layout_gravity="center"
+                    android:layout_marginTop="50dp"
+                    android:layout_marginBottom="50dp"
+                    app:srcCompat="@drawable/logo"/>
 
                 <GridView
                     android:id="@+id/grdHomeTiles"
