--- a/app/src/main/res/layout/item_chat_left.xml
+++ b/app/src/main/res/layout/item_chat_left.xml
@@ -21,12 +21,14 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
-            android:text="Username"
-            android:textColor="#eeeeee"/>
+            android:textStyle="bold"
+            android:text="Geartronix"
+            android:textColor="#FF265B1E"/>
 
         <ImageView
             android:id="@+id/imgAttachment"
             style="@style/messageImageAttachement"
+            android:visibility="gone"
             app:srcCompat="@android:drawable/ic_menu_report_image"/>å
 
         <TextView
@@ -35,7 +37,7 @@
             android:layout_height="wrap_content"
             android:maxWidth="100dp"
             android:padding="5dp"
-            android:textColor="#cccccc"/>
+            android:textColor="#333333"/>
 
     </LinearLayout>
 
