--- a/app/src/main/res/menu/services_menu.xml
+++ b/app/src/main/res/menu/services_menu.xml
@@ -10,9 +10,9 @@
 
     <item
         android:id="@+id/action_general_checkup"
-        android:icon="@drawable/general_service_icon"
-        android:title="Check up /diagnostics"
-        app:showAsAction="never|always"/>
+        android:icon="@drawable/request_general_service_icon"
+        android:title="General check up /diagnostics"
+        app:showAsAction="always"/>
 
     <item
         android:id="@+id/action_help"
