--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -29,7 +29,7 @@
         </android.support.design.widget.AppBarLayout>
 
         <ViewStub android:id="@+id/pageLayout"
-                  layout="@layout/content_home"
+                  layout="@layout/content_dashboard"
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"/>
 
