--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,139 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<android.support.v4.widget.DrawerLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
+    tools:openDrawer="start">
 
-    <FrameLayout
+    <android.support.design.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_above="@+id/frmLoginBottom">
+        tools:context="co.za.geartronix.activities.LoginActivity">
 
-        <ScrollView
-            android:id="@+id/scrLogin"
+        <android.support.design.widget.AppBarLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content"
+            android:theme="@style/AppTheme.AppBarOverlay">
 
-            <LinearLayout
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/toolbar"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:focusableInTouchMode="true"
-                android:gravity="center"
-                android:orientation="vertical"
-                android:paddingBottom="20dp"
-                android:paddingLeft="20dp"
-                android:paddingRight="20dp"
-                android:paddingTop="60dp"
-                tools:context="co.za.geartronix.activities.LoginActivity">
+                android:layout_height="?attr/actionBarSize"
+                android:background="?attr/colorPrimary"
+                app:popupTheme="@style/AppTheme.PopupOverlay"/>
 
-                <ImageView
-                    android:id="@+id/imageView"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="20dp"
-                    android:layout_marginTop="0dp"
-                    app:srcCompat="@drawable/logo"/>
+        </android.support.design.widget.AppBarLayout>
 
-                <TextView
-                    android:id="@+id/txtWelcomeMessage"
-                    style="@style/mediumLabel"
-                    android:text="@string/sign_in_welcome_message"
-                    android:textStyle="bold"/>
+        <ViewStub android:id="@+id/pageLayout"
+                  layout="@layout/content_login"
+                  android:layout_width="match_parent"
+                  android:layout_height="match_parent"/>
 
-                <TextView
-                    android:id="@+id/lblUsername"
-                    style="@style/mediumLabel"
-                    android:text="@string/enter_email_or_cell"
-                    android:textColor="#cccccc"
-                    android:visibility="gone"/>
 
-                <EditText
-                    android:id="@+id/txtUsername"
-                    style="@style/mediumTextBox"
-                    android:hint="@string/enter_email_or_cell"
-                    android:visibility="gone"/>
+    </android.support.design.widget.CoordinatorLayout>
 
-                <TextView
-                    style="@style/mediumLabel"
-                    android:text="@string/password"
-                    android:textColor="#cccccc"/>
-
-                <EditText
-                    android:id="@+id/txtPassword"
-                    style="@style/mediumTextBox"
-                    android:hint="@string/password"
-                    android:inputType="textWebPassword"/>
-
-                <Button
-                    android:id="@+id/btnLogin"
-                    style="@style/mediumButton"
-                    android:layout_width="match_parent"
-                    android:layout_marginTop="30dp"
-                    android:onClick="onViewClickedEvent"
-                    android:text="@string/sign_in"/>
-
-                <ImageView
-                    android:layout_width="120dp"
-                    android:layout_height="150dp"
-                    android:visibility="gone"
-                    android:scaleType="fitXY"
-                    android:layout_marginTop="30dp"
-                    app:srcCompat="@mipmap/login_icon"/>
-
-            </LinearLayout>
-
-        </ScrollView>
-
-    </FrameLayout>
-
-    <RelativeLayout
-        android:id="@+id/frmLoginBottom"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:paddingTop="12dp"
-        android:paddingBottom="12dp"
-        android:paddingLeft="0dp"
-        android:paddingRight="0dp"
-        android:background="@color/login_bottom_background">
-
-        <TextView  style="@style/forgotPasswordLabel"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_toLeftOf="@+id/btnRegister"
-            android:layout_margin="0dp"
-            android:padding="0dp"
-            android:id="@+id/txtForgotPassword"
-            android:onClick="onViewClickedEvent"
-            android:text="@string/forgot_password"
-            android:textAlignment="center"/>
-
-        <TextView style="@style/mediumLabel"
-                  android:layout_alignParentRight="true"
-                  android:layout_alignParentEnd="true"
-                  android:id="@+id/btnRegister"
-                  android:text="Switch user"
-                  android:layout_width="wrap_content"
-                  android:layout_margin="0dp"
-                  android:paddingTop="0dp"
-                  android:paddingBottom="0dp"
-                  android:paddingLeft="40dp"
-                  android:paddingRight="30dp"
-                  android:textAlignment="center"
-                  android:onClick="onViewClickedEvent"/>
-    </RelativeLayout>
-
-    <include
-        android:id="@+id/frmLoadingScreen"
+    <android.support.design.widget.NavigationView
+        android:id="@+id/nav_view"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_width="match_parent"
-        android:layout_alignParentBottom="true"
-        layout="@layout/loading_screen"
-        android:visibility="gone"/>
+        android:layout_gravity="start"
+        android:background="@color/colorTransparentBlack"
+        android:fitsSystemWindows="true"
+        app:headerLayout="@layout/nav_header_home"
+        app:itemIconTint="@color/common_google_signin_btn_text_dark_default"
+        app:itemTextColor="@color/textWhite"
+        app:menu="@menu/login_side_menu"/>
 
-</RelativeLayout>
+</android.support.v4.widget.DrawerLayout>
