--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -46,6 +46,6 @@
         app:headerLayout="@layout/nav_header_home"
         app:itemIconTint="@color/common_google_signin_btn_text_dark_default"
         app:itemTextColor="@color/textWhite"
-        app:menu="@menu/login_side_menu"/>
+        app:menu="@menu/registration_menu"/>
 
 </android.support.v4.widget.DrawerLayout>
