--- a/app/src/main/res/menu/registration_menu.xml
+++ b/app/src/main/res/menu/registration_menu.xml
@@ -7,4 +7,11 @@
         android:icon="@drawable/help_icon"
         android:title="@string/help"
         app:showAsAction="never"/>
+
+    <item
+        android:id="@+id/action_exit"
+        android:icon="@drawable/close_icon"
+        android:title="Exit app"
+        app:showAsAction="never"/>
+
 </menu>
