--- a/app/src/main/res/layout/content_registration.xml
+++ b/app/src/main/res/layout/content_registration.xml
@@ -1,7 +1,94 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/menuContenRegisterID"
+                app:layout_behavior="@string/appbar_scrolling_view_behavior"
+                android:layout_width="match_parent"
+                android:paddingTop="50dp"
+                android:layout_height="match_parent">
 
-</LinearLayout>
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:focusableInTouchMode="true"
+            android:orientation="vertical"
+            android:paddingRight="20dp"
+            android:paddingLeft="20dp"
+            android:paddingBottom="20dp"
+            android:paddingTop="10dp"
+            android:layout_gravity="clip_vertical">
+
+            <TextView
+                style="@style/mediumLabel"
+                android:visibility="gone"
+                android:text="Enter your details"
+                android:textAlignment="center"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginBottom="20dp"
+                android:textColor="#cccccc"/>
+
+            <TextView
+                style="@style/mediumLabel"
+                android:text="*First name"
+                android:textColor="#cccccc"/>
+
+            <EditText
+                android:id="@+id/txtName"
+                style="@style/mediumTextBox"
+                android:hint="Enter your first name..."/>
+
+            <TextView
+                style="@style/mediumLabel"
+                android:text="*Contact number"
+                android:textColor="#cccccc"/>
+
+            <EditText
+                android:id="@+id/txtCell"
+                android:inputType="phone"
+                style="@style/mediumTextBox"
+                android:hint="Enter contact number..."/>
+
+            <TextView
+                style="@style/mediumLabel"
+                android:text="Email"
+                android:textColor="#cccccc"/>
+
+            <EditText
+                android:id="@+id/txtEmail"
+                style="@style/mediumTextBox"
+                android:hint="Enter email..."/>
+
+            <TextView
+                style="@style/mediumLabel"
+                android:text="City"
+                android:textColor="#cccccc"/>
+
+            <EditText
+                android:id="@+id/txtCity"
+                style="@style/mediumTextBox"
+                android:hint="Enter city..."/>
+
+            <Button
+                android:id="@+id/btnRegister"
+                style="@style/mediumButton"
+                android:layout_width="match_parent"
+                android:layout_marginTop="30dp"
+                android:onClick="onViewClickedEvent"
+                android:text="Registet"/>
+
+        </LinearLayout>
+    </ScrollView>
+
+    <include
+        android:id="@+id/frmLoadingScreen"
+        layout="@layout/loading_screen"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentBottom="true"
+        android:visibility="gone"/>
+
+</RelativeLayout>
