Added validation regex

--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -1,10 +1,77 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="co.za.geartronix.activities.ForgotPasswordActivity">
 
-</android.support.constraint.ConstraintLayout>
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:focusableInTouchMode="true"
+            android:orientation="vertical"
+            android:paddingRight="20dp"
+            android:paddingLeft="20dp"
+            android:paddingBottom="20dp"
+            android:paddingTop="10dp"
+            android:layout_gravity="clip_vertical">
+
+            <TextView
+                style="@style/mediumLabel"
+                android:text="*Enter your old password"
+                android:textColor="#cccccc"/>
+
+            <EditText
+                android:id="@+id/txtOldPassword"
+                android:inputType="textPassword"
+                android:layout_marginBottom="20dp"
+                style="@style/mediumTextBox"
+                android:hint="Enter old password..."/>
+
+            <TextView
+                style="@style/mediumLabel"
+                android:text="*Create a new password"
+                android:textColor="#cccccc"/>
+
+            <EditText
+                android:id="@+id/txtPassword"
+                android:inputType="textPassword"
+                style="@style/mediumTextBox"
+                android:hint="Enter new password..."/>
+
+            <TextView
+                style="@style/mediumLabel"
+                android:text="Confirm your password"
+                android:textColor="#cccccc"/>
+
+            <EditText
+                android:id="@+id/txtConfirmPassword"
+                android:inputType="textPassword"
+                style="@style/mediumTextBox"
+                android:hint="Confirm password..."/>
+
+            <Button
+                android:id="@+id/btnRegister"
+                style="@style/mediumButton"
+                android:layout_width="match_parent"
+                android:layout_marginTop="40dp"
+                android:onClick="onViewClickedEvent"
+                android:text="@string/update_password"/>
+
+        </LinearLayout>
+    </ScrollView>
+
+    <include
+        android:id="@+id/frmLoadingScreen"
+        layout="@layout/loading_screen"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentBottom="true"
+        android:visibility="gone"/>
+
+</RelativeLayout>
