Added validation regex

--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -21,10 +21,17 @@
             android:paddingTop="10dp"
             android:layout_gravity="clip_vertical">
 
-            <TextView
+            <TextView android:id="@+id/lblCodeOrOldPassword"
                 style="@style/mediumLabel"
-                android:text="*Enter your old password"
+                android:text="* label text"
                 android:textColor="#cccccc"/>
+
+            <EditText
+                android:id="@+id/txtCode"
+                android:inputType="textPassword"
+                android:layout_marginBottom="20dp"
+                style="@style/mediumTextBox"
+                android:hint="Enter code..."/>
 
             <EditText
                 android:id="@+id/txtOldPassword"
