--- a/app/src/main/res/layout/content_login.xml
+++ b/app/src/main/res/layout/content_login.xml
@@ -110,14 +110,14 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_margin="0dp"
-            android:layout_toLeftOf="@+id/btnRegister"
+            android:layout_toLeftOf="@+id/lblRegister"
             android:onClick="onViewClickedEvent"
             android:padding="0dp"
             android:text="@string/forgot_password"
             android:textAlignment="center"/>
 
         <TextView
-            android:id="@+id/btnRegister"
+            android:id="@+id/lblRegister"
             style="@style/mediumLabel"
             android:layout_width="wrap_content"
             android:layout_alignParentEnd="true"
