--- a/app/src/main/res/layout/content_login.xml
+++ b/app/src/main/res/layout/content_login.xml
@@ -110,14 +110,14 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_margin="0dp"
-            android:layout_toLeftOf="@+id/lblRegister"
+            android:layout_toLeftOf="@+id/lblSwitchUser"
             android:onClick="onViewClickedEvent"
             android:padding="0dp"
             android:text="@string/forgot_password"
             android:textAlignment="center"/>
 
         <TextView
-            android:id="@+id/lblRegister"
+            android:id="@+id/lblSwitchUser"
             style="@style/mediumLabel"
             android:layout_width="wrap_content"
             android:layout_alignParentEnd="true"
@@ -139,5 +139,36 @@
         android:layout_height="match_parent"
         android:layout_alignParentBottom="true"
         android:visibility="gone"/>
+
+    <FrameLayout
+        android:id="@+id/frmUserSelectContainer"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/transBlack"
+        android:clickable="true"
+        android:visibility="gone">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <TextView style="@style/largeLabel"
+                android:id="@+id/textView"
+                android:layout_margin="25dp"
+                android:textAlignment="center"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Select a linked user"/>
+
+            <ListView
+                android:id="@+id/lstUserSelection"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                />
+        </LinearLayout>
+
+    </FrameLayout>
 
 </RelativeLayout>
