Fixed registration intent bug

--- a/app/src/main/res/layout/content_login.xml
+++ b/app/src/main/res/layout/content_login.xml
@@ -166,7 +166,8 @@
                 android:id="@+id/lstUserSelection"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                />
+                android:dividerHeight="5dp"/>
+
         </LinearLayout>
 
     </FrameLayout>
