--- a/app/src/main/res/layout/user_item.xml
+++ b/app/src/main/res/layout/user_item.xml
@@ -1,53 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:app="http://schemas.android.com/apk/res-auto"
-                android:layout_width="match_parent"
                 android:id="@+id/rltvUserSelect"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/login_bottom_background"
                 android:gravity="center"
-                android:paddingRight="5dp"
-                android:paddingLeft="5dp"
-                android:paddingTop="9dp"
-                android:paddingBottom="9dp"
                 android:onClick="onViewClickedEvent"
-                android:background="@color/testGreentrans"
-                android:layout_height="wrap_content">
+                android:paddingBottom="9dp"
+                android:paddingLeft="5dp"
+                android:paddingRight="5dp"
+                android:paddingTop="9dp">
 
     <TextView
         android:id="@+id/txtUserinfo"
-        android:visibility="gone"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:visibility="gone"/>
 
     <ImageView
         android:id="@+id/imgIcon"
-        android:layout_width="35dp"
-        android:layout_height="35dp"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:scaleType="fitXY"
         app:srcCompat="@mipmap/user_icon"/>
 
     <TextView
         android:id="@+id/txtUsername"
         style="@style/mediumLabel"
+        android:layout_centerHorizontal="true"
         android:layout_centerInParent="true"
         android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
-        android:gravity="start"
-        android:textSize="@dimen/medium_plus_font_size"
+        android:layout_marginBottom="0dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:layout_marginTop="0dp"
-        android:layout_marginBottom="0dp"
-        android:padding="0dp"
-        android:layout_toRightOf="@+id/imgIcon"
         android:layout_toLeftOf="@+id/imgChev"
-        android:text="Name"/>
+        android:layout_toRightOf="@+id/imgIcon"
+        android:gravity="start"
+        android:padding="0dp"
+        android:text="Name"
+        android:textSize="@dimen/medium_plus_font_size"/>
 
     <ImageView
         android:id="@+id/imgChev"
-        android:layout_alignParentRight="true"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
         android:layout_alignParentEnd="true"
-        android:layout_width="35dp"
-        android:layout_height="35dp"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
         android:scaleType="fitXY"
         app:srcCompat="@drawable/service_arrow"/>
 </RelativeLayout>
