--- a/app/src/main/res/menu/registration_menu.xml
+++ b/app/src/main/res/menu/registration_menu.xml
@@ -11,7 +11,7 @@
     <item
         android:id="@+id/action_exit"
         android:icon="@drawable/close_icon"
-        android:title="Exit app"
+        android:title="@string/quit_registration"
         app:showAsAction="never"/>
 
 </menu>
