--- a/app/src/main/res/layout/content_registration.xml
+++ b/app/src/main/res/layout/content_registration.xml
@@ -91,7 +91,7 @@
                     android:textColor="#cccccc"/>
 
                 <ImageView
-                    android:id="@+id/imageButton"
+                    android:id="@+id/imgGender"
                     android:layout_width="40dp"
                     android:layout_height="23dp"
                     android:layout_gravity="center_vertical"
