--- a/app/src/main/res/layout/content_registration.xml
+++ b/app/src/main/res/layout/content_registration.xml
@@ -74,7 +74,7 @@
                 android:hint="Enter city..."/>
 
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_marginBottom="10dp"
                 android:layout_marginTop="15dp"
@@ -87,14 +87,18 @@
                     android:layout_gravity="center_vertical"
                     android:layout_marginTop="0dp"
                     android:layout_weight="1"
+                    android:padding="0dp"
                     android:text="*Gender"
                     android:textColor="#cccccc"/>
 
                 <ImageView
                     android:id="@+id/imgGender"
-                    android:layout_width="40dp"
+                    android:layout_width="30dp"
                     android:layout_height="23dp"
                     android:layout_gravity="center_vertical"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="5dp"
+                    android:scaleType="fitCenter"
                     app:srcCompat="@drawable/service_arrow"/>
 
                 <RadioGroup
