--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -38,7 +38,7 @@
                 android:inputType="textPassword"
                 android:layout_marginBottom="20dp"
                 style="@style/mediumTextBox"
-                android:hint="Enter old password..."/>
+                android:hint="Enter old password"/>
 
             <TextView
                 style="@style/mediumLabel"
@@ -49,7 +49,7 @@
                 android:id="@+id/txtPassword"
                 android:inputType="textPassword"
                 style="@style/mediumTextBox"
-                android:hint="Enter new password..."/>
+                android:hint="Enter new password"/>
 
             <TextView
                 style="@style/mediumLabel"
@@ -60,7 +60,7 @@
                 android:id="@+id/txtConfirmPassword"
                 android:inputType="textPassword"
                 style="@style/mediumTextBox"
-                android:hint="Confirm password..."/>
+                android:hint="Confirm password"/>
 
             <Button
                 android:id="@+id/btnRegister"
