--- a/app/src/main/res/layout/content_registration.xml
+++ b/app/src/main/res/layout/content_registration.xml
@@ -40,7 +40,7 @@
             <EditText
                 android:id="@+id/txtName"
                 style="@style/mediumTextBox"
-                android:hint="Enter your first name..."/>
+                android:hint="Enter your first name"/>
 
             <TextView
                 style="@style/mediumLabel"
@@ -51,7 +51,7 @@
                 android:id="@+id/txtCell"
                 android:inputType="phone"
                 style="@style/mediumTextBox"
-                android:hint="Enter contact number..."/>
+                android:hint="Enter contact number"/>
 
             <TextView
                 style="@style/mediumLabel"
@@ -61,7 +61,7 @@
             <EditText
                 android:id="@+id/txtEmail"
                 style="@style/mediumTextBox"
-                android:hint="Enter email..."/>
+                android:hint="Enter email"/>
 
             <TextView android:visibility="gone"
                 style="@style/mediumLabel"
@@ -71,7 +71,7 @@
             <EditText android:visibility="gone"
                 android:id="@+id/txtCity"
                 style="@style/mediumTextBox"
-                android:hint="Enter city..."/>
+                android:hint="Enter city"/>
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -135,7 +135,7 @@
                 android:id="@+id/txtPassword"
                 android:inputType="textPassword"
                 style="@style/mediumTextBox"
-                android:hint="Enter password..."/>
+                android:hint="Enter password"/>
 
             <TextView
                 style="@style/mediumLabel"
@@ -146,7 +146,7 @@
                 android:id="@+id/txtConfirmPassword"
                 android:inputType="textPassword"
                 style="@style/mediumTextBox"
-                android:hint="Confirm password..."/>
+                android:hint="Confirm password"/>
 
             <Button
                 android:id="@+id/btnRegister"
